# app/controller/location.go
@@ -6,7 +6,15 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-
+// GetLocations godoc
+// @Summary      Список расположений камер
+// @Tags         Расположение
+// @Accept       json
+// @Produce      json
+// @Success      200  {array}   model.Location
+// @Failure      400  {object}  controller.ActionError
+// @Router       /locations [get]
+// @Security 	 ApiKeyAuth
 func (c *Config) GetLocations(g *gin.Context) {
 	locations, err := c.service.Location().All()
 	if err != nil {
