# docs/swagger.json
@@ -1,26 +1,87 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server celler server.",
-        "title": "Swagger Example API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
+        "description": "Здесь представлены все методы для работы админстраторов и менеджеров магазинов.\nВопросы на info@e92.ru.",
+        "title": "Дискаунтер автозачастей е92",
+        "contact": {},
         "version": "1.0"
     },
-    "host": "scan.e92.ru",
     "basePath": "/api/v1",
-    "paths": {},
+    "paths": {
+        "/locations": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Расположение"
+                ],
+                "summary": "Список расположений камер",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Location"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.ActionError"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "controller.ActionError": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "User not found"
+                },
+                "url": {
+                    "type": "string",
+                    "example": "scan.e92.ru/api/v1/scan"
+                }
+            }
+        },
+        "model.Location": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string",
+                    "example": "pokrovka"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 12
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Красноярск Покровка"
+                }
+            }
+        }
+    },
     "securityDefinitions": {
-        "BasicAuth": {
-            "type": "basic"
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
